--- a/package.json
+++ b/package.json
@@ -1,32 +1,56 @@
 {
-  "name": "mt-admin",
-  "version": "1.0.0",
-  "description": "用来学习中后台管理平台系统的搭建",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/feefeefee/MT-admin.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/feefeefee/MT-admin/issues"
-  },
-  "homepage": "https://github.com/feefeefee/MT-admin#readme",
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.3",
-    "vue-tsc": "^1.6.1"
-  },
-  "dependencies": {
-    "vue": "^3.2.47"
-  }
+    "name": "mt-admin",
+    "version": "1.0.0",
+    "description": "用来学习中后台管理平台系统的搭建",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "vite",
+        "lint:eslint": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
+        "lint:stylelint": "stylelint ./**/*.{css,less,vue,html} --fix",
+        "prettier": "prettier --write ./**/*.{html,vue,ts,cjs,json,md}",
+        "lint": "npm run lint:eslint && npm run lint:stylelint",
+        "prepare": "husky install"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/feefeefee/MT-admin.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/feefeefee/MT-admin/issues"
+    },
+    "homepage": "https://github.com/feefeefee/MT-admin#readme",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@vitejs/plugin-vue": "^4.2.1",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-vue": "^9.11.0",
+        "husky": "^8.0.3",
+        "less": "^4.1.3",
+        "less-loader": "^11.1.0",
+        "postcss": "^8.4.23",
+        "postcss-html": "^1.5.0",
+        "postcss-less": "^6.0.0",
+        "prettier": "^2.8.8",
+        "stylelint": "^15.6.1",
+        "stylelint-config-prettier": "^9.0.5",
+        "stylelint-config-recommended-less": "^1.0.4",
+        "stylelint-config-standard": "^33.0.0",
+        "stylelint-config-standard-vue": "^1.0.0",
+        "stylelint-less": "^1.0.6",
+        "stylelint-order": "^6.0.3",
+        "typescript": "^5.0.4",
+        "vite": "^4.3.3",
+        "vite-plugin-eslint": "^1.8.1",
+        "vite-plugin-stylelint": "^4.3.0",
+        "vue-tsc": "^1.6.1"
+    },
+    "dependencies": {
+        "vue": "^3.2.47"
+    }
 }
